fix(TheSidebar): update z-index, add to global vars

--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -26,4 +26,5 @@
 
 	/** z-index **/
 	--z-index-loader-absolute: 100000;
+	--z-index-sidebar: 100;
 }
